- Patch to 'SpecialRandompage.php' for namespace level policy enforcement
- Patch to 'SpecialRecentchanges.php' for namespace level policy enforcement
- Patch to 'SpecialRecentchangeslinked.php'  for namespace level policy enforcement
- Patch to 'SpecialStatistics.php'  for namespace level policy enforcement
- Patch to 'User.php':
	1) Added hook 'UserIsAllowed' in order to integrate with enhanced permission sub-system.
	2) Modified 'isAllowed' method.
- Patch to 'Xml.php'  for namespace level policy enforcement (added 'browse' right)
========
REL1_10_2:
- Patch to 'Special:Upload.php' to for handling NS_IMAGE namespace rights
- Added 'Log/upload' permission related settings
- Patch to 'Article.php' to disable parser caching upon article saving/updating (parser cache gets 
  updated upon article viewing 'only')
 - Added 'Log/delete' permission related settings
 - Added 'ShowRedirectPageText' extension
 - Added 'InterWikiLinkManager' extension
 - Corrections & enhancements to 'ExtensionClass'
 - Corrections & enhancements to 'ViewsourceRight' extension
 - Added 'SidebarEx' extension
 ========
 REL1_10_3:
 - Added proposed modification detailed in Bugzilla #7302 to enable custom jobs.
 - Changed 'SyntaxColoring' extension name to 'FileSystem Syntax Coloring' (more descriptive)
 - Added <wikitext> section support in 'FileSystem SyntaxColoring' extension (for NS_FILESYSTEM namespace)
 - Integrated 'GeSHi' syntax highlighter extension
 -- Added 'SyntaxHighlight' hook
 - Fixed 'delete' and 'protect' namespace level policy in Special:Log
 - Added 'FormProc' extension
 - Added 'SpecialPagesManager' extension
 - Added 'SecureHTML' extension
 - Added 'SecureProperties' extension
 - Added 'AddScriptCss' extension
 - Added 'ParserTools' extension
==========
REL1_10_4:
- Added 'AutoLanguage' extension
- Added 'ParserPhase2' extension
- Added 'source' tag to geshi extension
- Adjusted 'revision id' information provided through extension credits on most extensions